# insurance-multi-agent

./: .gitignore  AGENTS.md  Makefile  PRD.md  README.md  azure.yaml  compose.yaml
backend/: .acrignore  .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  build_policy_index.py  entrypoint.sh  pyproject.toml  pytest.ini  test_pdf_processor.py
backend/app/: dependencies.py  main.py  sample_data.py
backend/app/agents/: __init__.py  assessment.py  autogen_assessment.py  autogen_communication.py  base.py  communication.py  enhanced_orchestrator.py  enums.py  llm_complexity_assessor.py  orchestrator.py
backend/app/api/routes/: __init__.py  agents.py  enhanced_assessment.py  enhanced_communication.py  feedback.py  health.py  orchestrator.py  websocket.py  websocket_management.py
backend/app/api/v1/endpoints/: agent.py  claims.py  metrics.py  scenarios.py  workflow.py
backend/app/core/: config.py  exceptions.py  logger.py
backend/app/data/: scenarios.db
backend/app/db/: __init__.py  database.py  policy_repo.py  vehicle_repo.py
backend/app/db/repositories/: __init__.py  claim_repo.py  scenario_repo.py
backend/app/models/: __init__.py  agent.py  agent_outputs.py  claim.py  domain.py  scenario.py  workbench.py
backend/app/schemas/: __init__.py  agents.py  claims.py  communication.py  feedback.py
backend/app/services/: __init__.py  claim_data_helpers.py  claim_processing.py  claim_service.py  feedback_service.py  scenario_generator.py  single_agent.py  websocket_service.py
backend/app/static/: websocket_demo.html
backend/app/utils/: __init__.py  datetime_utils.py  validation.py
backend/app/workflow/: __init__.py  client.py  policy_search.py  registry.py  supervisor.py  tools.py
backend/app/workflow/agents/: __init__.py  claim_assessor.py  communication_agent.py  policy_checker.py  risk_analyst.py  synthesizer.py
backend/app/workflow/data/: document_metadata.json  index_status.json
backend/data/policies/: auto_policy.md
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_postgres_schema.py
backend/scripts/: debug_complexity.py  demo_llm_approach.py
backend/tests/: conftest.py  live_auth.py  test_api_agent.py  test_api_workflow.py  test_auto_approval.py  test_azure_consistency.py  test_claims_api.py  test_database_init.py  test_debug_fixes.py  test_e2e_workflow.py  test_enhanced_assessment_agent.py  test_enhanced_communication_agent.py  test_feedback_capture.py  test_feedback_integration_simple.py  test_feedback_validation_report.py  test_llm_complexity.py  test_missing_items.py  test_orchestrator_workflow.py  test_scenarios_api.py  test_single_agent.py
backend/tests/results/: enhanced_assessment_test_results_20250607_130934.json  orchestrator_test_report.json
(+207 files in other folders)
