[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "Hello World FastAPI app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.112.1",
    "uvicorn[standard]>=0.29.0",
    "agent-framework-core>=1.0.0b260116",
    "azure-identity>=1.15.0",
    "openai>=1.0.0",
    "python-dotenv>=1.1.0",
    "faiss-cpu>=1.8.0",
    "greenlet>=3.1.1",
    "tiktoken>=0.8.0",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.26.1",
    # Retained for vector search (embeddings) - not used for agent orchestration
    "langchain-openai>=0.3.22",
    "langchain-community>=0.3.0",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore:.*SwigPyPacked.*:DeprecationWarning",
    "ignore:.*SwigPyObject.*:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning",
]
